--- a/src/dbgs-proxy/package.json
+++ b/src/dbgs-proxy/package.json
@@ -7,12 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/dbgs-proxy/index.js"
   },
-  "author": "Alexey Sosnoviy",
+  "author": "Alexey Sosnoviy, Dmitry Ovcharenko",
   "license": "MIT License",
   "dependencies": {
     "express": "^4.16.3",
     "http-proxy": "^1.17.0",
     "intel": "^1.2.0",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.19",
+    "minimist": "^1.2.0",
+    "dateformat": "^3.0.3"
   }
 }
